--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/src/index.css" rel="stylesheet">
     <title>Digital Logic Simulator</title>
   </head>
   <body>
